fix: make modal window background overlay visible

--- a/css/modal.css
+++ b/css/modal.css
@@ -63,8 +63,10 @@ use {
 .overlay {
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.6);
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 10;
   display: none;
   transition: .3s;
